<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/teal_200"
    tools:context=".CadastrarActivity">

    <EditText
        android:id="@+id/editTextNomeCadastro"
        android:layout_width="315dp"
        android:layout_height="45dp"
        android:background="@color/Fundo"
        android:backgroundTint="@color/botao_cor"
        android:ems="10"
        android:gravity="center_horizontal|center_vertical"
        android:hint="@string/text_valor2"
        android:inputType="textPersonName"
        app:layout_constraintBottom_toTopOf="@+id/editTextEndereco"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView2"
        app:layout_constraintVertical_bias="0.73" />

    <EditText
        android:id="@+id/editTextEndereco"
        android:layout_width="315dp"
        android:layout_height="44dp"
        android:background="@color/botao_cor"
        android:ems="10"
        android:gravity="center_horizontal|center_vertical"
        android:hint="@string/text_valor4"
        android:inputType="textPersonName"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.502"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.47000003" />

    <EditText
        android:id="@+id/editTextTelefone"
        android:layout_width="315dp"
        android:layout_height="46dp"
        android:background="@color/botao_cor"
        android:ems="10"
        android:gravity="center_horizontal|center_vertical"
        android:hint="@string/text_valor5"
        android:inputType="textPersonName"
        app:layout_constraintBottom_toTopOf="@+id/buttonCadastrarCadastro"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editTextEndereco"
        app:layout_constraintVertical_bias="0.61" />

    <Button
        android:id="@+id/buttonCadastrarCadastro"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:backgroundTint="@color/black"
        android:onClick="onCadastrar"
        android:text="@string/btn_valor1"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.694"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.651" />

    <Button
        android:id="@+id/buttonVoltar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:backgroundTint="@color/black"
        android:onClick="onVoltar"
        android:text="@string/text_valor"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.308"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.651" />

    <ImageView
        android:id="@+id/imageView2"
        android:layout_width="198dp"
        android:layout_height="190dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.04000002"
        app:srcCompat="@drawable/contato" />
</androidx.constraintlayout.widget.ConstraintLayout>